--- a/src/app/base/base.component.html
+++ b/src/app/base/base.component.html
@@ -1,4 +1,4 @@
-<div class="grid grid-cols-1 grid-rows-15 md:grid-rows-1 md:grid-cols-12 h-screen">
+<div class="grid grid-cols-1 grid-rows-15 md:grid-rows-1 md:grid-cols-12 h-screen" style="height: 100dvh !important;">
     <div #scrollContainer (scroll)="onScroll($event)" dir="ltr"
         class="row-span-13 overflow-y-auto md:col-span-11 relative overflow-x-hidden">
         <aside class="absolute right-0" [style.top.px]="scrollTop"
