--- a/src/app/berke/berke.component.html
+++ b/src/app/berke/berke.component.html
@@ -1,26 +1,32 @@
 <div class="flex justify-center px-5" dir="rtl">
   <div class="w-full lg:w-3/4 m-5 mt-2">
 
-    <div appWindow class="flex flex-row my-5 backdrop-blur-2xl rounded-2xl justify-center text-[var(--p-primary-50)] p-3">
+    <div appWindow
+      class="flex flex-row my-5 backdrop-blur-2xl rounded-2xl justify-center text-[var(--p-primary-50)] p-3">
       <div class="flex flex-col items-center gap-5" *ngIf="getTimeOfDay() === 'morning'">
-        <span class="w-30 h-30" [innerHTML]="timeIcons['morning']" style="filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.7));"></span>
-      <p class="text-xl">{{userProfile()?.username || ''}} صبح به خیر</p>
+        <span class="w-30 h-30" [innerHTML]="timeIcons['morning']"
+          style="filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.7));"></span>
+        <p class="text-xl">{{userProfile()?.username || ''}} صبح به خیر</p>
       </div>
       <div class="flex flex-col items-center gap-5" *ngIf="getTimeOfDay() === 'afternoon'">
-      <span class="w-30 h-30" [innerHTML]="timeIcons['afternoon']" style="filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.7));"></span>
-      <p class="text-xl">{{userProfile()?.username || ''}} بعد از ظهر به خیر</p>
+        <span class="w-30 h-30" [innerHTML]="timeIcons['afternoon']"
+          style="filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.7));"></span>
+        <p class="text-xl">{{userProfile()?.username || ''}} بعد از ظهر به خیر</p>
       </div>
       <div class="flex flex-col items-center gap-5" *ngIf="getTimeOfDay() === 'evening'">
-        <span class="w-30 h-30" [innerHTML]="timeIcons['evening']" style="filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.7));"></span>
-      <p class="text-xl">{{userProfile()?.username || ''}} عصر به خیر</p>
+        <span class="w-30 h-30" [innerHTML]="timeIcons['evening']"
+          style="filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.7));"></span>
+        <p class="text-xl">{{userProfile()?.username || ''}} عصر به خیر</p>
       </div>
       <div class="flex flex-col items-center gap-5" *ngIf="getTimeOfDay() === 'night'">
-      <span class="w-30 h-30" [innerHTML]="timeIcons['night']" style="filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.7));"></span>
-      <p class="text-xl">{{userProfile()?.username || ''}} شب به خیر</p>
+        <span class="w-30 h-30" [innerHTML]="timeIcons['night']"
+          style="filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.7));"></span>
+        <p class="text-xl">{{userProfile()?.username || ''}} شب به خیر</p>
       </div>
     </div>
     <div appWindow appWave [syncLevel]="calculateSyncLevel(journey)" *ngIf="featuredJourney() as journey"
-      class="my-5 h-40 backdrop-blur-2xl rounded-2xl p-3 text-[var(--p-primary-50)]" (click)="goToCourse(journey.course.id)">
+      class="my-5 h-40 backdrop-blur-2xl rounded-2xl p-3 text-[var(--p-primary-50)]"
+      (click)="goToCourse(journey.course.id)">
       <p class="text-xl ">ادامه سفر {{ journey.course.title }}</p>
 
       <div class=" mt-5 mb-5 flex justify-center items-center flex-row">
@@ -105,63 +111,71 @@
     </div> -->
     <div appWindow class="my-5 backdrop-blur-2xl rounded-2xl p-3">
       <p class="text-xl mb-5 text-[var(--p-primary-50)]">جدیدترین ها در برکه</p>
-      <p-carousel class="m-5" [value]="newest()" [numScroll]="1" [numVisible]="3" [responsiveOptions]="responsiveOptions" showIndicators="false" [circular]="true" dir="rtl">
+      <p-carousel class="m-5" [value]="newest()" [numScroll]="1" [numVisible]="3"
+        [responsiveOptions]="responsiveOptions" showIndicators="false" [circular]="true" dir="rtl">
         <ng-template let-course #item>
           <div class="border border-white/30 bg-[var(--p-primary-300)]/30 items-center backdrop-blur-2xl flex flex-col justify-center h-30 text-[var(--p-primary-50)] m-2 rounded-3xl p-2 pb-4
           shadow-[0px_0px_5px_1px_rgba(255,255,255,0.4)]
           " (click)="goToCourse(course.id)">
-<div class="w-12 h-12 items-center justify-center">
-  <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" class="w-full h-full" style="font-size: 2rem; margin-bottom: 10px; filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.7));">
-    <g [innerHTML]="course.iconPath | safeHtml"></g>
-  </svg>
-</div>    
+            <div class="w-12 h-12 items-center justify-center">
+              <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" class="w-full h-full"
+                style="font-size: 2rem; margin-bottom: 10px; filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.7));">
+                <g [innerHTML]="course.iconPath | safeHtml"></g>
+              </svg>
+            </div>
             <div class="mb-2 text-[var(--p-primary-50)]">{{course.title}}</div>
           </div>
         </ng-template>
       </p-carousel>
       <p class="text-xl mb-5 text-[var(--p-primary-50)]">پیشنهادی</p>
-      
-      <p-carousel class="m-5" [value]="recommendedCourses()" [numScroll]="1" [numVisible]="3"  [responsiveOptions]="responsiveOptions" showIndicators="false" [circular]="true" dir="rtl">
+
+      <p-carousel class="m-5" [value]="recommendedCourses()" [numScroll]="1" [numVisible]="3"
+        [responsiveOptions]="responsiveOptions" showIndicators="false" [circular]="true" dir="rtl">
         <ng-template let-course #item>
           <div class="border border-white/30 bg-[var(--p-primary-300)]/30 items-center backdrop-blur-2xl flex flex-col justify-center h-30 text-[var(--p-primary-50)] m-2 rounded-3xl p-2 pb-4
           shadow-[0px_0px_5px_1px_rgba(255,255,255,0.4)]
           " (click)="goToCourse(course.id)">
-<div class="w-12 h-12 items-center justify-center">
-  <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" class="w-full h-full" style="font-size: 2rem; margin-bottom: 10px; filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.7));">
-    <g [innerHTML]="course.iconPath | safeHtml"></g>
-  </svg>
-</div>               
-<div class="mb-2 text-[var(--p-primary-50)]">{{course.title}}</div>
-          </div>
-        </ng-template>
-      </p-carousel>
-<p class="text-xl mb-5 text-[var(--p-primary-50)]">مهارت ها</p>
-      <p-carousel class="m-5" [value]="skillCourses()" [numScroll]="1" [numVisible]="3" [responsiveOptions]="responsiveOptions" showIndicators="false" [circular]="true" dir="rtl">
-        <ng-template let-course #item>
-         <div class="border border-white/30 bg-[var(--p-primary-300)]/30 items-center backdrop-blur-2xl flex flex-col justify-center h-30 text-[var(--p-primary-50)] m-2 rounded-3xl p-2 pb-4
-          shadow-[0px_0px_5px_1px_rgba(255,255,255,0.4)]
-          " (click)="goToCourse(course.id)">
-<div class="w-12 h-12 items-center justify-center">
-  <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" class="w-full h-full" style="font-size: 2rem; margin-bottom: 10px; filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.7));">
-    <g [innerHTML]="course.iconPath | safeHtml"></g>
-  </svg>
-</div>    
+            <div class="w-12 h-12 items-center justify-center">
+              <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" class="w-full h-full"
+                style="font-size: 2rem; margin-bottom: 10px; filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.7));">
+                <g [innerHTML]="course.iconPath | safeHtml"></g>
+              </svg>
+            </div>
             <div class="mb-2 text-[var(--p-primary-50)]">{{course.title}}</div>
           </div>
         </ng-template>
       </p-carousel>
-<p class="text-xl text-[var(--p-primary-50)]">عمیق</p>
-      <p-carousel class="m-5" [value]="deepCourses()" [numScroll]="1" [numVisible]="3" [responsiveOptions]="responsiveOptions" showIndicators="false" [circular]="true" dir="rtl">
+      <p class="text-xl mb-5 text-[var(--p-primary-50)]">مهارت ها</p>
+      <p-carousel class="m-5" [value]="skillCourses()" [numScroll]="1" [numVisible]="3"
+        [responsiveOptions]="responsiveOptions" showIndicators="false" [circular]="true" dir="rtl">
         <ng-template let-course #item>
           <div class="border border-white/30 bg-[var(--p-primary-300)]/30 items-center backdrop-blur-2xl flex flex-col justify-center h-30 text-[var(--p-primary-50)] m-2 rounded-3xl p-2 pb-4
           shadow-[0px_0px_5px_1px_rgba(255,255,255,0.4)]
           " (click)="goToCourse(course.id)">
-<div class="w-12 h-12 items-center justify-center">
-  <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" class="w-full h-full" style="font-size: 2rem; margin-bottom: 10px; filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.7));">
-    <g [innerHTML]="course.iconPath | safeHtml"></g>
-  </svg>
-</div>               
-<div class="mb-2 text-[var(--p-primary-50)]">{{course.title}}</div>
+            <div class="w-12 h-12 items-center justify-center">
+              <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" class="w-full h-full"
+                style="font-size: 2rem; margin-bottom: 10px; filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.7));">
+                <g [innerHTML]="course.iconPath | safeHtml"></g>
+              </svg>
+            </div>
+            <div class="mb-2 text-[var(--p-primary-50)]">{{course.title}}</div>
+          </div>
+        </ng-template>
+      </p-carousel>
+      <p class="text-xl text-[var(--p-primary-50)]">عمیق</p>
+      <p-carousel class="m-5" [value]="deepCourses()" [numScroll]="1" [numVisible]="3"
+        [responsiveOptions]="responsiveOptions" showIndicators="false" [circular]="true" dir="rtl">
+        <ng-template let-course #item>
+          <div class="border border-white/30 bg-[var(--p-primary-300)]/30 items-center backdrop-blur-2xl flex flex-col justify-center h-30 text-[var(--p-primary-50)] m-2 rounded-3xl p-2 pb-4
+          shadow-[0px_0px_5px_1px_rgba(255,255,255,0.4)]
+          " (click)="goToCourse(course.id)">
+            <div class="w-12 h-12 items-center justify-center">
+              <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" class="w-full h-full"
+                style="font-size: 2rem; margin-bottom: 10px; filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.7));">
+                <g [innerHTML]="course.iconPath | safeHtml"></g>
+              </svg>
+            </div>
+            <div class="mb-2 text-[var(--p-primary-50)]">{{course.title}}</div>
           </div>
         </ng-template>
       </p-carousel>
@@ -173,23 +187,34 @@
             <p>{{ course.tracks }}</p>
           </div>
     </div> -->
-    <div appWindow class="my-5 backdrop-blur-2xl rounded-2xl p-3">
-      <p class="text-xl text-[var(--p-primary-50)]">دسته بندی ها</p>
-      <p-selectbutton class="mt-3" style="flex-wrap: wrap;" [options]="tags()" [multiple]="true" [optionLabel]="'title'"
-        [options]="tags()"></p-selectbutton>
+<div appWindow class="my-5 backdrop-blur-2xl rounded-2xl p-3">
+  <p class="text-xl text-[var(--p-primary-50)]">دسته بندی ها</p>
+  
+  <p-selectbutton [(ngModel)]="selectedTags" class="mt-3" style="flex-wrap: wrap;" [options]="tags()"
+    [multiple]="true" [optionLabel]="'title'">
+  </p-selectbutton>
 
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
-          <div *ngFor="let course of courses()" class="border border-white/30 bg-[var(--p-primary-300)]/30 items-center backdrop-blur-2xl flex flex-col justify-center h-30 text-[var(--p-primary-50)] m-2 rounded-3xl p-2 pb-4
-          shadow-[0px_0px_5px_1px_rgba(255,255,255,0.4)]
-          " (click)="goToCourse(course.id)">
-<div class="w-12 h-12 items-center justify-center">
-  <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" class="w-full h-full" style="font-size: 2rem; margin-bottom: 10px; filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.7));">
-    <g [innerHTML]="course.iconPath | safeHtml"></g>
-  </svg>
-</div>  
-            <h3>{{ course.title }}</h3>
-            </div>
-        </div>
+  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mt-4">
+    <div *ngFor="let course of displayedCourses()" 
+      class="border border-white/30 bg-[var(--p-primary-300)]/30 items-center backdrop-blur-2xl flex flex-col justify-center h-30 text-[var(--p-primary-50)] m-2 rounded-3xl p-2 pb-4 shadow-[0px_0px_5px_1px_rgba(255,255,255,0.4)] cursor-pointer" 
+      (click)="goToCourse(course.id)">
+      
+      <div class="w-12 h-12 items-center justify-center">
+        <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" class="w-full h-full"
+          style="font-size: 2rem; margin-bottom: 10px; filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.7));">
+          <g [innerHTML]="course.iconPath | safeHtml"></g>
+        </svg>
+      </div>
+      <h3>{{ course.title }}</h3>
     </div>
+  </div>
+
+  <div *ngIf="hasMore()" class="flex justify-center mt-6 mb-4">
+    <button (click)="loadMore()" 
+      class="px-6 py-2 rounded-full border border-white/30 bg-white/10 text-[var(--p-primary-50)] backdrop-blur-md hover:bg-white/20 transition-all active:scale-95">
+      بیشتر ...
+    </button>
+  </div>
+</div>
   </div>
 </div>
