--- a/src/app/berke/berke.component.css
+++ b/src/app/berke/berke.component.css
@@ -5,3 +5,6 @@
   margin: 1px;
   border-radius: 1px;
 }
+::ng-deep .p-selectbutton .p-togglebutton.p-togglebutton-checked .p-togglebutton-label {
+    color: var(--p-primary-600) !important;
+}
