--- a/src/app/journal/journal.component.html
+++ b/src/app/journal/journal.component.html
@@ -66,7 +66,7 @@
         </div>
       </div>
 
-      <textarea rows="5" [(ngModel)]="newJournal.note" type="text" placeholder="تست" fluid="true" pTextarea
+      <textarea rows="5" [(ngModel)]="newJournal.note" type="text" placeholder="چی در ذهنت میگذره؟" fluid="true" pTextarea
         [autoResize]="true">
             </textarea>
       <div class="my-3">
