--- a/src/app/shared/components/manage-password/manage-password.component.html
+++ b/src/app/shared/components/manage-password/manage-password.component.html
@@ -1,23 +1,19 @@
-                            <form [formGroup]="changePasswordForm" class="flex flex-col text-lg gap-5 m-2">
-                                <p-password formControlName="oldPassword" placeholder="گذرواژه قدیمی" toggleMask="true"
-                                    feedback="false"></p-password>
-                                <p-password formControlName="newPassword" placeholder="گذرواژه جدید" toggleMask="true"
-                                    styleClass="text-sm" [toggleMask]="true" autocomplete="true"
-                                    promptLabel="یک گذرواژه قوی انتخاب کنید." weakLabel="گذرواژه ضعیف"
-                                    mediumLabel="گذرواژه متوسط" strongLabel="گذرواژه قوی"></p-password>
-                                <p-password formControlName="repeatNewPassword" placeholder="تکرار گذرواژه جدید"
-                                    toggleMask="true" feedback="false" (onFocus)="passwordRepeatFocused.set(true)"
-                                    (onBlur)="passwordRepeatFocused.set(false)" />
-                                <div class="p-password-overlay border-2 relative z-1000 mt-21 text-sm"
-                                    *ngIf="passwordRepeatFocused() && changePasswordForm.hasError('passwordMismatch')"
-                                    [ngClass]="{ '!text-red-400': true }">
-                                    گذرواژه‌ها با هم مطابقت ندارند.
-                                </div>
-                                <div class="flex flex-row items-center gap-2">
-                                    <p-button [disabled]="changePasswordForm.invalid"
-                                         rounded="true" size="small"
-                                        (click)="changePassword()">
-                                              <span>ذخیره <i class="pi pi-save"></i></span>
-</p-button>
-                                </div>
-                            </form>
+<form [formGroup]="changePasswordForm" class="flex flex-col text-lg gap-5 m-2">
+    <p-password formControlName="oldPassword" placeholder="گذرواژه قدیمی" toggleMask="true"
+        feedback="false"></p-password>
+    <p-password formControlName="newPassword" placeholder="گذرواژه جدید" toggleMask="true" styleClass="text-sm"
+        [toggleMask]="true" autocomplete="true" promptLabel="یک گذرواژه قوی انتخاب کنید." weakLabel="گذرواژه ضعیف"
+        mediumLabel="گذرواژه متوسط" strongLabel="گذرواژه قوی"></p-password>
+    <p-password formControlName="repeatNewPassword" placeholder="تکرار گذرواژه جدید" toggleMask="true" feedback="false"
+        (onFocus)="passwordRepeatFocused.set(true)" (onBlur)="passwordRepeatFocused.set(false)" />
+    <div class="p-password-overlay border-2 relative z-1000 mt-21 text-sm"
+        *ngIf="passwordRepeatFocused() && changePasswordForm.hasError('passwordMismatch')"
+        [ngClass]="{ '!text-red-400': true }">
+        گذرواژه‌ها با هم مطابقت ندارند.
+    </div>
+    <div class="flex flex-row items-center gap-2">
+        <p-button [disabled]="changePasswordForm.invalid" rounded="true" size="small" (click)="changePassword()">
+            <span>ذخیره <i class="pi pi-save"></i></span>
+        </p-button>
+    </div>
+</form>
