--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -28,7 +28,7 @@
     </div>
     <div appWindow [opacity]="1" class="flex backdrop-blur-md
  flex-col overflow-hidden relative w-1/4 min-w-80 h-100 rounded-xl p-2
- text-right border-2 border-[var(--p-primary-600)] shadow-md text-shadow-white">
+ text-right shadow-md text-shadow-white">
 
         <p-stepper [(value)]="activeStep" class="w-full">
             <!-- login form initialization
@@ -53,7 +53,9 @@
                                     'slide-in-left' : direction === 'forward' && activeStep === 1 ,
                                 }">
 
-                                <h2 class="text-xl mb-5">یه قدم تا آرامش...</h2>
+                                <h2 class="text-xl mb-5">
+ثبت نام در برکه
+                                </h2>
 
                                 <div class="w-full mb-3 flex flex-col gap-2">
                                     <p-floatlabel>
@@ -61,14 +63,14 @@
                                         <input pInputText id="phoneNumber" type="tel" class="w-full"
                                             formControlName="phoneNumber" />
                                     </p-floatlabel>
-                                    <p-button severity="secondary" variant="text" size="small" label="ورود"
+                                    <p-button severity="secondary" variant="text" size="small" label="حساب کاربری دارید؟"
                                         (onClick)="onLogin()"></p-button>
                                 </div>
                             </div>
                             <!-- arrow buttons div -->
                             <div class="flex w-full justify-end">
                                 <p-button (onClick)="goToStep(2)" [disabled]="!phoneNumber.valid"
-                                    icon="pi pi-arrow-left" severity="secondary" variant="text" rounded="true"
+                                    icon="pi pi-arrow-left" label="قدم بعدی" severity="secondary" variant="text" rounded="true"
                                     size="small"></p-button>
                             </div>
                         </ng-template>
@@ -92,7 +94,9 @@
                                     'slide-in-right' : direction === 'backward' && activeStep === 2 ,
                                     'slide-in-left' : direction === 'forward' && activeStep === 2 ,
                                 }">
-                                <h2 class="text-xl mb-5">یه مکان امن برای ذهنت</h2>
+                                <h2 class="text-xl mb-5">
+ثبت نام در برکه
+                                </h2>
                                 <div class="w-full mb-3 flex flex-col gap-2">
                                     <p-floatlabel>
                                         <label for="password" class="block self-center">گذرواژه</label>
@@ -141,7 +145,9 @@
                                     'slide-in-right' : direction === 'backward' && activeStep === 2 ,
                                     'slide-in-left' : direction === 'forward' && activeStep === 2 ,
                                 }">
-                                <h2 class="text-xl">جایی برای نفس کشیدن</h2>
+                                <h2 class="text-xl">
+ثبت نام در برکه
+                                </h2>
                                 <div class="text-sm h-5">
                                     <div *ngIf="otpTimer() as timer">
                                         {{ timer * 1000 | date:'mm:ss': 'UTC' | persianDigits}}
